# gpu-computing

./: .gitignore  .gitmodules  README.md
CollisionDetection/: CMakeLists.txt  log.md
CollisionDetection/data/: min-00000.scn
CollisionDetection/inc/: aabb.cuh  aabb.h  box.h  bvh.cuh  crigid.cuh  crigid.h  definitions.h  forceline.h  mat3f.cuh  mat3f.h  morton.cuh  pair.h  quaternion.cuh  quaternion.h  real.h  transf.cuh  transf.h  tri.h  tri3f.cuh  vec3f.cuh  vec3f.h
CollisionDetection/src/: bvh.cu  cmodel.cpp  cmodel.cu  collid.cpp  collid.cu  collid___.cpp  crigid.cpp  crigid.cu  crigid.h  obj-viewer.cu  pinned.cu
julia/: CMakeLists.txt
julia/include/: book.h  cpu_julia.hpp  gl_helper.h  gpu_julia.cuh
julia/src/: cpu_julia.cpp  cpu_julia_.cpp  gpu_julia.cu
raytracing/: CMakeLists.txt  README.md  summary.md  valid.py
raytracing/include/: CPUBitmap.hpp  rt.cuh
raytracing/src/: rt.cu  rt_const.cu  rt_noconst.cu
stream/: CMakeLists.txt  summary.md
stream/src/: vectorAdd.cu  vectorAdd_origin.cu  vectorAdd_pinned.cu
